<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".fragment.EditHutangFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="40dp"
        android:gravity="center"
        android:padding="10dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/tv_iduser"
            android:layout_width="0dp"
            android:layout_height="0dp"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pilih"
            android:layout_margin="3dp">

            <AutoCompleteTextView
                android:id="@+id/et_hutang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_margin="10dp">
            <Button
                android:id="@+id/tgl"
                app:icon="@drawable/ic_date"
                android:layout_width="60dp"
                android:layout_height="65dp"
                android:layout_marginEnd="3dp"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_tgl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tanggal"
                    android:inputType="textCapSentences"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_jmlh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rp1"
                android:inputType="numberDecimal"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

        <Button
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            app:icon="@drawable/ic_update"
            android:layout_margin="2dp"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:text="@string/ubah"/>

        <Button
            android:id="@+id/btn_hapus"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            app:icon="@drawable/ic_delete"
            android:layout_margin="2dp"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:text="@string/hapus"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>