<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="3dp"
    android:id="@+id/hutangLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_list_hutang"
        android:paddingStart="45dp"
        android:paddingEnd="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:orientation="horizontal"
        android:elevation="5dp"
        android:gravity="center_vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_hutang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/salsa"
                android:text="@string/produk"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_tgl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/salsa"
                android:text="@string/_12_des_2021"
                android:textColor="@color/white" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.691"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.493">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/salsa"
                android:text="@string/rp"
                android:textColor="@color/white"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_jml"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/salsa"
                android:text="@string/_100_000_000"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/img_edit"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/background_icon"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.39">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center|right"
                android:layout_margin="60dp"
                android:src="@drawable/ic_edit"
                tools:ignore="ContentDescription,RtlHardcoded" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>